fix #1384 listen button overlapping language select

--- a/web/src/components/pages/new-home/home.css
+++ b/web/src/components/pages/new-home/home.css
@@ -13,6 +13,10 @@
 }
 
 .home {
+    & .primary-button button {
+        z-index: var(--middle-z-index);
+    }
+
     & .heroes {
         border-top: 1px solid var(--light-grey);
         margin: 0 auto;
